<resources>
    <string name="app_name">Godfathers Tips</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up_with_email">Sign Up with email address</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_out">Sign Out</string>

    <string name="email">Email</string>
    <string name="is_email_verified">Email verified</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm password</string>

    <string name="please_wait">Please wait</string>
    <string name="loading_user_data">Loading user data…</string>
    <string name="loading_user_data_error">Error loading user data…</string>
    <string name="creating_account">Creating account…</string>
    <string name="signing_in">Signing In…</string>
    <string name="error">Error</string>

    <string name="creating_account_success">Account successfully created</string>
    <string name="email_confirm_require">Please confirm your email address to complete Sign Up process</string>

    <string name="creating_account_failure">Error creating account</string>
    <string name="creating_user_failure">Error updating users table</string>
    <string name="creating_role_failure">Error updating roles table</string>

    <string name="signing_in_failure">Sign In failed</string>

    <string name="reset_link_sending">Sending reset link to email address…</string>
    <string name="reset_link_not_sent">Could not sent reset link</string>
    <string name="reset_link_sent">Reset link sent</string>
    <string name="reset_link_sent_message">Check your email</string>

    <string name="register">Sign Up</string>
    <string name="login">Sign In</string>
    <string name="logout">Sign Out</string>
    <string name="logo">Logo</string>

    <string name="email_required">Email address is required</string>
    <string name="email_invalid">Email address is not valid</string>
    <string name="password_required">Password is required</string>
    <string name="password_invalid">Password should be at least 6 characters long</string>
    <string name="password_confirm_required">Confirm password</string>
    <string name="password_confirm_invalid">Passwords don\'t match</string>

    //
    <string name="authentication">Authentication</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_about">About</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="drawer_item_share">Share</string>
    <string name="drawer_item_tips">Tips</string>
    <string name="drawer_item_tips_active">Active tips</string>
    <string name="drawer_item_tips_archive">Archived tips</string>
    <string name="drawer_item_tips_add">Add tip</string>
    <string name="drawer_item_chat">Chat</string>
    <string name="drawer_item_users">Users</string>
    <string name="vip_status_change">Toggle VIP status</string>
    <string name="vip_status_on">Give VIP status</string>
    <string name="vip_status_off">Remove VIP status</string>

    <string name="rivals">Rivals</string>
    <string name="time">Time</string>
    <string name="tip">Tip</string>
    <string name="add_tip">Add Tip</string>
    <string name="odds">Odds</string>
    <string name="tip_successfully_added">Tip successfully added</string>
    <string name="archive">Archive</string>
    <string name="message">Enter message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
